# python-event-sourcery

./: .adr-dir  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  django_manage.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: bump-version-and-publish.yml  main.yml  publish-release.yml
adr/20220730-record-architecture-decisions/: index.html
adr/20230903-explicit-init-arguments-for-sqlalchemy-s-models/: index.html
adr/20231027_1-packaging-of-the-project/: index.html
adr/20231027_2-leave-implementation-of-synchronous-dispatcher-to-users-of-the-library/: index.html
adr/20231029-in-memory-event-store/: index.html
adr/20231230-in_transaction_subscription/: index.html
adr/20240726-dependencies-and-distribution/: index.html
adr/20241007-multitenancy/: index.html
adr/20250411-packaging-of-the-project-revised/: index.html
adr/20250729-privacy-data-encryption-and-shredding/: index.html
adr/20251004-packaging-of-the-event_store-package/: index.html
basics/: index.html
concepts/basics/: index.html
docs/: process-manager-brainstorming.md  process-manager-concept.md  process-manager-pseudocode-proposal.md  process-manager-research.md
docs/adr/: 0001-record-architecture-decisions.md  0002-explicit-init-arguments-for-sqlalchemy-s-models.md  0003-packaging-of-the-project.md  0004-leave-implementation-of-synchronous-dispatcher-to-users-of-the-library.md  0005-in-memory-event-store.md  0006-in_transaction_subscription.md  0007-dependencies-and-distribution.md  0008-multitenancy.md  0009-packaging-of-the-project-revised.md  0009-privacy-data-encryption-and-shredding.md  0012-dynamodb-backend.md  20220730-record-architecture-decisions.md  20231027_2-leave-implementation-of-synchronous-dispatcher-to-users-of-the-library.md  20231029-in-memory-event-store.md  20231230-in_transaction_subscription.md  20240726-dependencies-and-distribution.md  20241007-multitenancy.md  20250411-packaging-of-the-project-revised.md  20250729-privacy-data-encryption-and-shredding.md  20251004-packaging-of-the-event_store-package.md  20260314-aggregate-metadata.md
docs/code/: test_recipes.py
docs/concepts/: basics.md
docs/documentation/: includee.md  mkdocs.yml
docs/recipes/: data_privacy.md  defining_events.md  event_sourcing.md  integrate.md  multitenancy.md  outbox.md  saving_events.md  snapshots.md  subscriptions.md
docs/reference/: backend.md  encryption.md  event.md  event_sourcing.md  event_store.md  exceptions.md  in_transaction.md  interfaces.md  outbox.md  stream_id.md  subscription.md
docs/res/: eda_example.plantuml
documentation/site/: index.html  objects.inv
event_sourcery/: __init__.py  after_commit_subscriber.py  aggregate.py  backend.py  dummy_outbox_filterer_strategy.py  dummy_outbox_storage_strategy.py  encryption.py  event.py  event_registry.py  event_store.py  event_stream.py  exceptions.py  factory.py  in_transaction.py  interfaces.py  outbox.py  projector.py  raw_event_dict.py  repository.py  serde.py  storage_strategy.py  subscriber.py  subscription.py  sync_projection.py  versioning.py
event_sourcery/_event_store/: backend.py  event_store.py  in_memory.py  outbox.py  stream_id.py  versioning.py
event_sourcery/aggregate/: __init__.py  aggregate.py  repository.py
event_sourcery/dto/: __init__.py  event_stream.py  raw_event_dict.py
event_sourcery/event_sourcing/: __init__.py  aggregate.py  repository.py
event_sourcery/event_store/: __init__.py  backend.py  context.py  dispatcher.py  encryption.py  event.py  event_store.py  exceptions.py  factory.py  in_memory.py  in_transaction.py  interfaces.py  outbox.py  stream.py  stream_id.py  subscription.py  tenant_id.py  types.py  versioning.py
event_sourcery/interfaces/: __init__.py  base_event.py  cursors_dao.py  event.py  outbox_filterer_strategy.py  outbox_storage_strategy.py  serde.py  storage_strategy.py  subscriber.py
event_sourcery/read_model/: __init__.py  cursors_dao.py  projector.py
event_sourcery/serde/: __init__.py
event_sourcery/types/: __init__.py  stream_id.py
event_sourcery_django/: __init__.py  apps.py  dto.py  event_store.py  models.py  outbox.py  subscription.py
event_sourcery_django/migrations/: 0001_initial.py
event_sourcery_dynamodb/: __init__.py  backend.py  config.py  event_store.py  outbox.py  py.typed  subscription.py
event_sourcery_esdb/: __init__.py  dto.py  event_store.py  outbox.py  stream.py  subscription.py
event_sourcery_kombu/: __init__.py
event_sourcery_kurrentdb/: __init__.py  dto.py  event_store.py  outbox.py  stream.py  subscription.py
event_sourcery_pydantic/: event.py  repository.py  serde.py
event_sourcery_sqlalchemy/: __init__.py  cursors_dao.py  dto.py  event_store.py  guid.py  jsonb.py  models.py  outbox.py  sqlalchemy_cursors_dao.py  sqlalchemy_event_store.py  sqlalchemy_outbox.py  sqlalchemy_subscription.py  subscription.py
event_sourcery_sqlalchemy/models/: __init__.py  base.py  default.py
examples/0-fastapi-integration/: api.py  docker-compose.yml  requirements.txt
examples/1-library/: alembic.ini  alembic_tests.ini  requirements.txt
features/: index.html
projections_read_models_experiment/: __init__.py  add_example_data.py  event_store.py  events.py  logger.py  projection.py  projector.py  subscription.py
recipes/data_privacy/: index.html
recipes/defining_events/: index.html
recipes/event_sourcing/: index.html
recipes/integrate/: index.html
recipes/multitenancy/: index.html
recipes/outbox/: index.html
recipes/saving_events/: index.html
recipes/snapshots/: index.html
recipes/subscriptions/: index.html
reference/: index.html
reference/aggregate/: index.html
reference/backend_factory/: index.html
reference/event/: index.html
reference/event_registry/: index.html
reference/event_store/: index.html
search/: search_index.json
tests/: bdd.py  conftest.py  events.py  factories.py  mark.py  matchers.py  test_event_store.py  test_stream_id.py
tutorial_eda/: index.html
tutorial_event_sourcing/: index.html
(+280 files in other folders)
